# saga-framework-python

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: checkout_payment.py
source/: context.py  parallel_task.py  rollback_task.py  saga.py  task.py  task_status.py
source/errors/: parallel_task_requires_tasks_exception.py  saga_compensation_execution_exception.py  saga_execution_exception.py  task_execution_exception.py
source/logging/: saga_logging.py
test/: parallel_task_test.py  rollback_task_test.py  saga_test.py  task_test.py
