[tool.poetry]
name = "saga-framework-python"
version = "0.0.1"
description = "A python framework for implementing a saga pattern with hook points for each state execution."
authors = ["PrashaanPillay"]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = [
    "source",
]
testpaths = [
    ".test"
]
python_files = ["Test_*.py", "*_Test.py", "test_*.py", "*_test.py"]

[tool.poetry.dependencies]
python = "3.12.5"
mypy = "^1.11.2"
pytest = "^8.3.3"
ruff = "^0.6.7"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
